objects/Job_Team__c/Job_Team__c.object-meta.xml
<CustomObject>
    <description>This is Job Team object. It is used to store role and assigned staff to that role for a Job record.</description>
    <label>Job Team</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>JobTeam Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>