objects/Job_Team__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>Staff</label>
    <length>50</length>
    <type>Text</type>
</CustomField>