objects/Job_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>Role__c</columns>
    <columns>Staff__c</columns>
    <columns>Task__c</columns>
    <columns>Flag__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>